# xgboost

./: .gitignore  CMakeLists.txt
jvm-packages/: pom.xml
jvm-packages/xgboost4j-spark/docs/: index.md
ml/dmlc/xgboost-jvm/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ml/dmlc/xgboost-jvm/0.72/: xgboost-jvm-0.72.pom  xgboost-jvm-0.72.pom.md5  xgboost-jvm-0.72.pom.sha1
ml/dmlc/xgboost-jvm/0.72-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.72-20180428.143439-1.pom.sha1  xgboost-jvm-0.72-20180510.050307-1.pom.md5
ml/dmlc/xgboost-jvm/0.72.1-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.72.1-20180510.031621-1.pom.md5  xgboost-jvm-0.72.1-20180510.031621-1.pom.sha1
ml/dmlc/xgboost-jvm/0.80-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.80-20180724.212047-1.pom.sha1  xgboost-jvm-0.80-20180724.212213-2.pom.md5
ml/dmlc/xgboost-jvm/0.81-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.81-20180914.222146-1.pom.md5  xgboost-jvm-0.81-20180914.222146-1.pom.sha1
ml/dmlc/xgboost-jvm/0.82-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.82-20190104.030300-2.pom  xgboost-jvm-0.82-20190104.030300-2.pom.md5  xgboost-jvm-0.82-20190104.030300-2.pom.sha1  xgboost-jvm-0.82-20190123.061439-10.pom.sha1  xgboost-jvm-0.82-20190221.223557-13.pom.md5
ml/dmlc/xgboost-jvm/0.83-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost-jvm-0.83-20190428.000525-1.pom.md5  xgboost-jvm-0.83-20190428.000525-1.pom.sha1
ml/dmlc/xgboost4j/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ml/dmlc/xgboost4j-example/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ml/dmlc/xgboost4j-example/0.72/: xgboost4j-example-0.72-sources.jar.md5  xgboost4j-example-0.72-sources.jar.sha1  xgboost4j-example-0.72.jar.md5  xgboost4j-example-0.72.jar.sha1  xgboost4j-example-0.72.pom.md5  xgboost4j-example-0.72.pom.sha1
ml/dmlc/xgboost4j-example/0.72-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-example-0.72-20180428.143903-1-sources.jar.md5  xgboost4j-example-0.72-20180428.143903-1-sources.jar.sha1  xgboost4j-example-0.72-20180428.143903-1.jar.md5  xgboost4j-example-0.72-20180428.143903-1.jar.sha1  xgboost4j-example-0.72-20180428.143903-1.pom.md5  xgboost4j-example-0.72-20180428.143903-1.pom.sha1  xgboost4j-example-0.72-20180510.051156-1-sources.jar.md5  xgboost4j-example-0.72-20180510.051156-1-sources.jar.sha1  xgboost4j-example-0.72-20180510.051156-1.jar.md5  xgboost4j-example-0.72-20180510.051156-1.jar.sha1
ml/dmlc/xgboost4j-example/0.72.1-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-example-0.72.1-20180510.034132-1-sources.jar.sha1  xgboost4j-example-0.72.1-20180510.034132-1.pom.md5  xgboost4j-example-0.72.1-20180510.034132-1.pom.sha1  xgboost4j-example-0.72.1-20180510.041952-2-sources.jar.md5  xgboost4j-example-0.72.1-20180510.041952-2.jar.md5  xgboost4j-example-0.72.1-20180510.041952-2.jar.sha1  xgboost4j-example-0.72.1-20180510.044621-1-sources.jar.md5  xgboost4j-example-0.72.1-20180510.044621-1-sources.jar.sha1  xgboost4j-example-0.72.1-20180510.044621-1.jar.md5  xgboost4j-example-0.72.1-20180510.044621-1.jar.sha1
ml/dmlc/xgboost4j-example/0.80-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-example-0.80-20180724.212712-1.jar.md5  xgboost4j-example-0.80-20180724.212712-1.jar.sha1  xgboost4j-example-0.80-20180724.212712-1.pom.md5  xgboost4j-example-0.80-20180724.212712-1.pom.sha1
ml/dmlc/xgboost4j-example/0.81-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-example-0.81-20180914.222456-1.jar.md5  xgboost4j-example-0.81-20180914.222456-1.jar.sha1  xgboost4j-example-0.81-20180914.222456-1.pom.md5  xgboost4j-example-0.81-20180914.222456-1.pom.sha1
ml/dmlc/xgboost4j-example/0.82-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-example-0.82-20190103.190326-1.jar.sha1  xgboost4j-example-0.82-20190104.031800-2.jar.md5  xgboost4j-example-0.82-20190104.192338-3.jar.md5  xgboost4j-example-0.82-20190104.192338-3.jar.sha1  xgboost4j-example-0.82-20190107.001102-4.jar.md5  xgboost4j-example-0.82-20190107.001102-4.jar.sha1  xgboost4j-example-0.82-20190122.175241-5.jar.md5  xgboost4j-example-0.82-20190122.175241-5.jar.sha1  xgboost4j-example-0.82-20190122.175241-5.pom.sha1  xgboost4j-example-0.82-20190123.062455-6.jar.md5  xgboost4j-example-0.82-20190123.062455-6.jar.sha1  xgboost4j-example-0.82-20190123.062455-6.pom.md5  xgboost4j-example-0.82-20190123.072832-7.jar.md5  xgboost4j-example-0.82-20190123.072832-7.jar.sha1  xgboost4j-example-0.82-20190128.044234-8.jar.md5  xgboost4j-example-0.82-20190128.044234-8.jar.sha1  xgboost4j-example-0.82-20190221.225936-9.jar.md5  xgboost4j-example-0.82-20190221.225936-9.jar.sha1
ml/dmlc/xgboost4j-flink/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ml/dmlc/xgboost4j-flink/0.72-SNAPSHOT/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  xgboost4j-flink-0.72-20180428.143805-1-sources.jar.md5  xgboost4j-flink-0.72-20180428.143805-1-sources.jar.sha1  (+8 more)
ml/dmlc/xgboost4j-spark/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
src/: learner.cc
src/common/: hist_util.cc  hist_util.h  span.h
src/predictor/: cpu_predictor.cc
src/tree/: param.h  split_evaluator.cc  updater_basemaker-inl.h  updater_fast_hist.cc  updater_histmaker.cc  updater_quantile_hist.cc  updater_quantile_hist.h
src_reading/: Understand How XGBoost found Each Other.md  XGBoost Training Process.md
tests/cpp/: test_learner.cc
xgboostspark/: build.sbt
xgboostspark/conf/: example.conf
xgboostspark/docs/: design doc.md
xgboostspark/libxgboostspark/: Makefile  xgboostspark.cpp  xgboostspark.h
(+223 files in other folders)
